The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2004-01-30 DP        Include column comments in generated table SQL
    <li>2004-01-13 AP  ***  Fix crash refreshing dropped object
    <li>2003-12-28 AP        gtk: fix for dlgForeignKey combobox illegal selection 
    <li>2003-12-28 AP        Fix for pgDatabase::database crash
    <li>2003-12-10 AP        serial/bigserial datatype for ALTER TABLE; can create new sequence/dependency
    <li>2003-12-09 AP   ***  Fix for Tagalog language
    <li>2003-12-08 AP        Refactor virtual pgObject::GetDatabase()
    <li>2003-12-08 AP        Rewrite of schema qualifier suppression: configurable or search_path
    <li>2003-12-08 DP        Prompt to save changes before opening SQL files.
    <li>2003-12-08 AP        Query tool: display of inserted OIDs
    <li>2003-12-08 AP        pgAgent schema, changed system schema discovery
    <li>2003-12-05 AP   ***  allow all 'p' types except any,trigger,language_handler as return types for functions
    <li>2003-12-03 AP   ***  fix connect to MULE_INTERNAL db
    <li>2003-12-02 AP   ***  fix acl property display
    <li>2003-12-02 AP        another fix closing Query Tool
    <li>2003-12-01 AP        add display of superuser context settings
    <li>2003-11-30 AP        handle covering index for Foreign Keys
    <li>2003-11-30 AP        fix closing Query Tool while query is running
    <li>2003-11-30 AP   ***  fix error message when SET client_encoding fails
    <li>2003-11-28 HS   ***  Fix case sensitive keyword highlighting.
    <li>2003-11-28 DP  1.0.2 Update PostgreSQL docs to 7.4
    <li>2003-11-26 AP  1.0.2 fix notice processing for pgQueryThread