@@ -16,6 +16,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2004-02-23 DP        Correct syntax for constraint comments generated SQL
     <li>2004-01-30 DP        Include column comments in generated table SQL
     <li>2004-01-13 AP  ***  Fix crash refreshing dropped object
     <li>2003-12-28 AP        gtk: fix for dlgForeignKey combobox illegal selection 
